@startuml diagrama_clases
skinparam classAttributeIconSize 0
skinparam shadowing false
hide empty members

' ───────────── USUARIO ─────────────
class Usuario {
  - id_usuario : int
  - nombre : str
  - correo : str
  - password_hash : str
  - id_tipo : int  ' 1=Admin 2=Comprador 3=Vendedor
  - id_estado : int ' 1=Activa 2=Suspendida 3=Cancelada
  - reputacion : float
  - total_cal : int
  - fecha_registro : str
  - terminos_ok : bool
  --
  + registrar()
  + iniciarSesion()
  + cerrarSesion()
  + suspender()
  + cancelar()
  + reactivar()
  + cancelarPorFraude()
  + actualizarReputacion()
  + crear()
  + editar()
  + eliminar()
}

' ───────────── ARTICULO + extensiones ─────────────
class Articulo {
  - id_articulo : int
  - titulo : str
  - descripcion : str
  - id_tipo : int
  - id_condicion : int
  - ubicacion : str
  - id_vendedor : int
  - id_estado : int ' 1=Pendiente 2=Aprobado 3=Rechazado 4=Publicado
  - fecha_registro : str
  - imagen_path : str
  --
  + publicar()
  + aprobar()
  + rechazar()
  + aprobarAutomatico()
}

class Vehiculo {
  - id_articulo : int
  - marca : str
  - modelo : str
  - anio : int
  - kilometraje : int
  - num_serie : str
  - doc_path : str
}

class Inmueble {
  - id_articulo : int
  - tipo_propiedad : str
  - superficie_terreno : float
  - superficie_construida : float
  - num_habitaciones : int
  - ubicacion_detallada : str
  - doc_path : str
}

' ───────────── VALIDACION ─────────────
class Validacion {
  - id_validacion : int
  - id_articulo : int
  - id_admin : int
  - decision : str ' Aprobado|Rechazado|Automatico
  - comentario : str
  - fecha_limite : str ' NULL para vehiculo/inmueble
  - fecha_decision : str
  - extendida : bool
  --
  + aprobar()
  + rechazar()
  + extenderPlazo()
  + verificarAprobacionAutomatica()
}

' ───────────── SUBASTA ─────────────
class Subasta {
  - id_subasta : int
  - id_articulo : int
  - id_tipo : int ' 1=Inglesa 2=Holandesa 3=Sellada
  - precio_base : float
  - precio_actual : float
  - incremento_min : float
  - precio_piso : float
  - decremento_hora : float
  - fecha_inicio : str
  - fecha_fin : str
  - id_estado : int ' 1=Activa 2=Finalizada 3=Desierta 4=Cancelada
  - id_ganador : int
  - motivo_cancel : str
  --
  + crear()
  + cancelar()
  + cerrar()
  + verificarCierre()
  + declararDesierta()
  + recalcularPrecioHolandesa()
  + determinarGanador()
}

' ───────────── OFERTA ─────────────
class Oferta {
  - id_oferta : int
  - id_subasta : int
  - id_comprador : int
  - monto : float
  - fecha_oferta : str
  - es_sellada : bool
  --
  + registrar()
  + aceptarPrecio()
  + registrarSellada()
}

' ───────────── PAGO ─────────────
class Pago {
  - id_pago : int
  - id_subasta : int
  - id_comprador : int
  - monto : float
  - id_estado : int ' 1=Pend 2=EnVerif 3=Verif 4=Vencido 5=Reasignado
  - comprobante : str
  - fecha_limite : str
  - fecha_pago : str
  - es_segundo : bool
  --
  + crear()
  + registrarComprobante()
  + verificarVencidos()
  + reasignarSegundoPostor()
}

' ───────────── PLAN_PAGO ─────────────
class PlanPago {
  - id_plan : int
  - id_pago : int
  - num_cuota : int
  - monto_cuota : float
  - fecha_vencimiento : str
  - id_estado : int
  --
  + generarCuotas()
}

' ───────────── CALIFICACION ─────────────
class Calificacion {
  - id_calificacion : int
  - id_subasta : int
  - id_calificador : int
  - id_calificado : int
  - puntuacion : int ' 1..5
  - comentario : str
  - fecha : str
  --
  + registrar()
}

' ───────────── IMAGEN_RECEPCION ─────────────
class ImagenRecepcion {
  - id_imagen : int
  - id_pago : int
  - ruta : str
  - fecha : str
  --
  + guardar()
}

' ───────────── NOTIFICACION ─────────────
class Notificacion {
  - id_notificacion : int
  - id_usuario : int
  - mensaje : str
  - tipo : str ' Exito|Info|Advertencia|Error
  - leida : bool
  - fecha : str
  - id_ref : int
  --
  + crear()
  + marcarLeidas()
  + contarNoLeidas()
}

' ───────────── CORREO_SALIDA ─────────────
class CorreoSalida {
  - id_correo : int
  - id_destinatario : int
  - correo_destino : str
  - asunto : str
  - cuerpo : str
  - fecha : str
  - enviado : bool
  --
  + enviar()
  + verBandeja()
}

' ───────────── ListaNegra ─────────────
class ListaNegra {
  - id_lista : int
  - correo : str
  - motivo : str
  - fecha : str
  --
  + agregar()
  + estaBloqueado()
}

' ───────────── RELACIONES Y CARDINALIDAD ─────────────
Usuario "1" --> "0..*" Articulo        : vende
Articulo "1" --> "0..1" Vehiculo       : extiende
Articulo "1" --> "0..1" Inmueble       : extiende
Articulo "1" --> "0..*" Validacion     : se valida
Usuario  "1" --> "0..*" Validacion     : valida (admin)
Articulo "1" --> "1"    Subasta        : se subasta
Subasta  "1" --> "0..*" Oferta         : recibe
Usuario  "1" --> "0..*" Oferta         : puja
Subasta  "1" --> "0..*" Pago           : genera
Usuario  "1" --> "0..*" Pago           : paga
Usuario  "0..1" <-- "0..*" Subasta     : gana
Pago     "1" --> "0..*" PlanPago       : se divide en cuotas
Pago     "1" --> "0..*" ImagenRecepcion: evidencia
Subasta  "1" --> "0..*" Calificacion   : se califica
Usuario  "1" --> "0..*" Calificacion   : emite/recibe
Usuario  "1" --> "0..*" Notificacion   : recibe
Usuario  "1" --> "0..*" CorreoSalida   : destinatario
Usuario  "1" --> "0..*" ListaNegra     : bloqueado por correo

@enduml
